2008-09-28  Dodji Seketeli  <dodji@gnome.org>

	* www.gnome.org/projects/nemiver/index.html: Updated for Nemiver 0.6.3
	  release.

2008-09-25  Robert Ancell  <robert.ancell@gmail.com>

	* www.gnome.org/projects/index.wml: Added GCalctool to project list

2008-09-24  Karsten Bräckelmann  <guenther@rudersport.de>

	* www.gnome.org/projects/garnome/devel.html: 
	* www.gnome.org/projects/garnome/index.html: Two point Twenty Four.

2008-09-24  Vincent Untz  <vuntz@gnome.org>

	* www.gnome.org/htaccess:
	* www.gnome.org/img/flash/Makefile.am:
	* www.gnome.org/img/flash/two-twenty-four.png:
	* www.gnome.org/index.wml:
	* www.gnome.org/start/index.wml: GNOME 2.24.0 is out!

2008-09-23  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/data/shadowbox/css/shadowbox.css,
	  www.gnome.org/projects/cheese/data/shadowbox/images/loading.gif,
	  www.gnome.org/projects/cheese/data/themes/cheese/document.screen.css,
	  www.gnome.org/projects/cheese/Makefile.am,
	  www.gnome.org/projects/cheese/tour.html: 
	  enhance the css and javascript of the tour

2008-09-22  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html: 
	  populate the cheese 2.24.0 release

2008-09-22  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/download.html,
	  www.gnome.org/projects/cheese/index.html,
	  www.gnome.org/projects/cheese/tour.html: 
	  change the menu layout of the cheese page

2008-09-21  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/tour.html: 
	  minor html/css correction

2008-09-21  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/Makefile.am: 
	  fix some build errors

2008-09-21  daniel g. siegel <dgsiegel@gmail.com>

	* www.gnome.org/projects/cheese/data/images/cheese-2.24.png,
	  www.gnome.org/projects/cheese/data/screenshots/cheese-2.24.0-countdown.jpg,