@@ -54,14 +54,16 @@
 	padding-top: 55px;
 }
 
-#archmap a#bluez { left:36px; top:144px; }
-#archmap a#eds { left:158px; top:144px; }
-#archmap a#telepathy { left:280px; top:144px; }
-#archmap a#avahi { left:402px; top:144px; }
-#archmap a#gstreamer { left:36px; top:198px; }
-#archmap a#matchbox { left:158px; top:198px; }
-#archmap a#gconf { left:280px; top:198px; }
-#archmap a#gnomevfs { left:402px; top:198px; }
+#archmap a#bluez { left:43px; top:128px; }
+#archmap a#eds { left:163px; top:128px; }
+#archmap a#telepathy { left:283px; top:128px; }
+#archmap a#avahi { left:403px; top:128px; }
+#archmap a#gstreamer { left:43px; top:187px; }
+#archmap a#matchbox { left:163px; top:187px; }
+#archmap a#gconf { left:283px; top:187px; }
+#archmap a#sqlite { left:403px; top:187px; }
+#archmap a#gvfs { left:43px; top:247px; }
+#archmap a#gio { left:163px; top:247px; }
 
 #archmap a#gtk {
   left:42px;
@@ -71,13 +73,12 @@
   }
 * html #archmap a#gtk {
   height:74px;
-  he\ight:0;
   }
 
-#archmap a#pango { left:42px;  top:289px; width:155px;}
-#archmap a#cairo { left:199px; top:289px; width:155px;}
-#archmap a#atk { left:356px; top:289px; width:156px;}
+#archmap a#pango { left:49px;  top:346px; width:148px;}
+#archmap a#cairo { left:205px; top:346px; width:150px;}
+#archmap a#atk { left:362px; top:346px; width:151px;}
 
 #archmap a#x { left:35px; top:352px; width:160px;}
-#archmap a#glib { left:197px; top:352px; width:160px;}
-#archmap a#dbus { left:359px; top:352px; width:160px;}
+#archmap a#glib { left:42px; top:415px; width:235px;}
+#archmap a#dbus { left:282px; top:415px; width:236px;}
