@@ -88,7 +88,9 @@ next twelve months, to enable new technologies and functionality.</p>
       <li><a id="gstreamer" href="http://gstreamer.freedesktop.org/" title="GStreamer">GStreamer</a></li>
       <li><a id="matchbox" href="http://projects.o-hand.com/matchbox/" title="Matchbox">Matchbox</a></li>
       <li><a id="gconf" href="http://www.gnome.org/projects/gconf/" title="GConf">GConf</a></li>
-      <li><a id="gnomevfs" href="http://library.gnome.org/devel/gnome-vfs-2.0/stable/" title="GnomeVFS">GnomeVFS</a></li>
+      <li><a id="sqlite" href="http://sqlite.org/" title="SQLite">SQLite</a></li>
+      <li><a id="gvfs" href="http://en.wikipedia.org/wiki/GVFS" title="GVFS">GVFS</a></li>
+      <li><a id="gio" href="http://library.gnome.org/devel/gio/2.18/" title="gio">gio</a></li>
       <li><a id="gtk" href="http://www.gtk.org/" title="GTK+">GTK+</a></li>
       <li><a id="pango" href="http://www.pango.org/" title="Pango">Pango</a></li>
       <li><a id="cairo" href="http://cairographics.org/" title="Cairo">Cairo</a></li>
