@@ -1,3 +1,9 @@
+2008-09-30  Dave Neary  <dneary@gnome.org>
+
+	* www.gnome.org/mobile/index.wml
+	* www.gnome.org/mobile/archmap.css: Update the links after updating
+	the architecture graphic. Should have done this before: oops.
+
 2008-09-28  Dodji Seketeli  <dodji@gnome.org>
 
 	* www.gnome.org/projects/nemiver/index.html: Updated for Nemiver 0.6.3
